# Nixos_programs

./: flake.nix
nix-formare/: Cargo.toml
nix-parser/: Cargo.toml  result
nix-parser/src/: main.rs
nix-switcher/: Cargo.toml
nix-switcher/src/: generator.rs  main.rs  parsers.rs
nix-timetracker/: Cargo.toml  result
nix-timetracker/src/: norm.rs
nix_switcher/: Cargo.toml
nix_switcher/nix_switcher/: Cargo.toml
nix_switcher/src/: clean.rs  generator.rs  main.rs  parsers.rs  set.rs
nix_timetracker/: Cargo.toml  result
nix_timetracker/src/: Sorayastitel.sh  formater.rs  main.rs
xanterella/: Cargo.toml  funktionen.md
xanterella/src/: check.rs  files.rs  gen.rs  generator.rs  get.rs  git.rs  list.rs  main.rs  nix.rs  parse.rs  ssh.rs
