[package]
name = "nix-switcher"
version = "0.1.14"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
indexmap = { version = "2.14.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"
notify-rust = "4"
