[package]
name = "nix-timetracker"
version = "0.0.37"
edition = "2024"

[dependencies]
chrono = "0.4.44"
rusqlite = { version = "0.39.0", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs3 = "0.5.0"
notify-rust = "4"
